--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version":2,
-    "name": "BeProductive",
+    "name": "Manage It!",
     "version" : "1.0" ,
     
     "content_scripts": [
